Adding category icons on index page

--- a/crete_gis/templates/site_index.html
+++ b/crete_gis/templates/site_index.html
@@ -63,41 +63,119 @@ This is where you can override the hero area block. You can simply modify the co
   {% endblock %}
 
  {% block mainbody %}
- <div class="container">
-    <div class="row home-facets">
-    {% with facet_type='home' %}
-     {% facets as facets %}
-      <div class="col-md-6">
-        <p><a href="{% url "layer_browse" %}"><i class="fa fa-square-o fa-5x rotate-45"></i></a></p>
-        <h2><a href="{% url "layer_browse" %}">{{ facets.layer|default:_("No") }} {% blocktrans count counter=facets.layer %}Layer{% plural %}Layers{% endblocktrans %}</a></h2>
-        {% if user.is_authenticated %}
-        <p class="text-center"><a class="btn btn-default" href="{% url "layer_upload" %}" role="button">{% trans "Add layers" %} &raquo;</a></p>
-        {% else %}
-        <p class="text-center"><a class="btn btn-default" href="{% url "layer_browse" %}" role="button">{% trans "Explore layers" %} &raquo;</a></p>
-        {% endif %}
-      </div>
-      <div class="col-md-6">
-        <p><a href="{% url "maps_browse" %}"><i class="fa fa-map-marker fa-5x"></i></a></p>
-        <h2><a href="{% url "maps_browse" %}">{{ facets.map|default:_("No") }} {% blocktrans count counter=facets.map %}Map{% plural %}Maps{% endblocktrans %}</a></h2>
-        {% if user.is_authenticated %}
-        <p><a class="btn btn-default" href="{% url "new_map" %}" role="button">{% trans "Create maps" %} &raquo;</a></p>
-        {% else %}
-        <p><a class="btn btn-default" href="{% url "maps_browse" %}" role="button">{% trans "Explore maps" %} &raquo;</a></p>
-        {% endif %}
-      </div>
-   <!--   <div class="col-md-4">
-        <p><a href="{% url "profile_browse" %}"><i class="fa fa-user fa-5x"></i></a></p>
-        <h2><a href="{% url "profile_browse" %}">{{ facets.user|default:_("No") }} {% blocktrans count counter=facets.user %}User{% plural %}Users{% endblocktrans %}</a></h2>
-        <p><a class="btn btn-default" href="{% url "profile_browse" %}" role="button">{% trans "See users" %} &raquo;</a></p>
-      </div> -->
-    {% endwith %}
-    </div>
-  </div>
-  {% verbatim %}
-  <div ng-app="featured">
-    <div ng-repeat="item in featured">
-      <!--{{ item.title }}-->
-    </div>
-  </div>
-  {% endverbatim %}
+        <div class="container">
+                <div class="row">
+                        <div class="container text-center">
+                                <div class="col-xs-4 col-sm-2">
+                                        <a href="/search/?limit=100&offset=0&category__identifier__in=boundaries&category__identifier__in=planningCadastre" data-toggle="tooltip" data-placement="auto"
+                                                title="Political and administrative boundaries. Land use maps, zoning maps, cadastral surveys, land ownership.">
+    <div class="category">
+                                                        <i class="fa fa-flag fa-4x"></i>
+                                                        <h4>Όρια</h4>
+                                                </div>
+                                        </a>
+                                </div>
+                                <div class="col-xs-4 col-sm-2">
+                                        <a href="/search/?limit=100&offset=0&category__identifier__in=structure&category__identifier__in=intelligenceMilitary&category__identifier__in=utilitiesCommunication" data-toggle="tooltip" data-placement="auto"
+                                  title="Buildings, museums, churches, factories, housing, monuments, shops, towers. Energy, water and waste systems and communications infrastructure and services. Military bases, structures, activities." >
+                                                <div class="category">
+                                                        <i class="fa fa-home fa-4x"></i>
+                                                        <h4>Κατασκευές</h4>
+                                                </div>
+                                        </a>
+                                </div>
+                                 <div class="col-xs-4 col-sm-2">
+                                        <a href="/search/?limit=100&offset=0&category__identifier__in=climatologyMeteorologyAtmosphere" data-toggle="tooltip" data-placement="auto"
+                                                title="Cloud cover, weather, climate, atmospheric conditions, climate change, precipitation" >
+                                                <div class="category">
+                                                        <i class="fa fa-umbrella fa-4x"></i>
+                                                        <h4>Κλίμα</h4>
+                                                </div>
+ </a>
+                                </div>
+                                <div class="col-xs-4 col-sm-2">
+                                        <a href="/search/?limit=100&offset=0&category__identifier__in=elevation" data-toggle="tooltip" data-placement="auto"
+                                                title="Altitude, bathymetry, digital elevation models, slope, derived products" >
+                                                <div class="category">
+                                                        <i class="fa fa-level-up fa-4x"></i>
+
+                                                        <h4>Υψόμετρο</h4>
+                                                </div>
+                                        </a>
+                                </div>
+                                <div class="col-xs-4 col-sm-2">
+                                        <a href="/search/?limit=100&offset=0&category__identifier__in=geoscientificInformation" data-toggle="tooltip" data-placement="auto"
+                                         title="Geophysical features and processes, geology, minerals, sciences dealing with the composition, structure and origin of the earth s rocks, risks of earthquakes, volcanic activity, landslides, gravity information, soils, permafrost, hydrogeology, erosion." >
+                                                <div class="category">
+                                                        <i class="fa fa-globe fa-4x"></i>
+                                                        <h4>Γεωλογία</h4>
+                                                </div>
+                                        </a>
+                                </div>
+                                <div class="col-xs-4 col-sm-2">
+                                        <a href="/search/?limit=100&offset=0&category__identifier__in=health" data-toggle="tooltip" data-placement="auto"
+                                                title="Health, health services, human ecology, and safety." >
+                                                <div class="category">
+                                                        <i class="fa fa-medkit fa-4x"></i>
+                                                        <h4>Υγεία</h4>
+                                                </div>
+                                        </a>
+                                </div>
+                                <div class="col-xs-4 col-sm-2">
+                                        <a href="/search/?limit=100&offset=0&category__identifier__in=imageryBaseMapsEarthCover" data-toggle="tooltip" data-placement="auto"
+                                                title="Land cover, topographic maps, imagery, unclassified images, annotations." >
+                                                <div class="category">
+                                                        <i class="fa fa-tree fa-4x"></i>
+                                                        <h4>Κάλυψη Γης</h4>
+                                                </div>
+                                        </a>
+                                </div>
+                                 <div class="col-xs-4 col-sm-2">
+                                        <a href="/search/?limit=100&offset=0&category__identifier__in=biota&category__identifier__in=farming&category__identifier__in=environment" data-toggle="tooltip" data-placement="auto"
+                                                title="Wildlife, vegetation, biological sciences, ecology, wilderness, sealife, wetlands, habitat. Environmental resources, protection and conservation. Agriculture, irrigation, aquaculture, plantations, herding, pests and diseases affecting crops and livestock" >
+<div class="category">
+                                                        <i class="fa fa-leaf fa-4x"></i>
+                                                        <h4>Φύση</h4>
+                                                </div>
+                                        </a>
+                                </div>
+                                <div class="col-xs-4 col-sm-2">
+                                        <a href="/search/?limit=100&offset=0&category__identifier__in=location" data-toggle="tooltip" data-placement="auto"
+                                                title="Addresses, geodetic networks, control points, postal zones and services, place names" >
+                                                <div class="category">
+                                                        <i class="fa fa-map-marker fa-4x"></i>
+                                                        <h4>Γεωγραφική Θέση</h4>
+                                                </div>
+                                        </a>
+                                </div>
+                                <div class="col-xs-4 col-sm-2">
+                                        <a href="/search/?limit=100&offset=0&category__identifier__in=economy&category__identifier__in=society" data-toggle="tooltip" data-placement="auto"
+                                                title="Settlements, anthropology, archaeology, education, traditional beliefs, demographic data, crime and justice, census information. Economic activities, conditions and employment." >
+                                                <div class="category">
+                                                        <i class="fa fa-male fa-4x"></i>
+                                                        <h4>Πληθυσμός</h4>
+                                                </div>
+                                        </a>
+                                </div>
+                                <div class="col-xs-4 col-sm-2">
+                                        <a href="/search/?limit=100&offset=0&category__identifier__in=transportation" data-toggle="tooltip" data-placement="auto"
+                                                title="Roads, airports/airstrips, shipping routes, tunnels, nautical charts, vehicle or vessel location, aeronautical charts, railways." >
+                                                <div class="category">
+                                                        <i class="fa fa-road fa-4x"></i>
+                                                        <h4>Μεταφορές</h4>
+                                                </div>
+                                        </a>
+                                </div>
+                                <div class="col-xs-4 col-sm-2">
+                                        <a href="/search/?limit=100&offset=0&category__identifier__in=inlandWaters&category__identifier__in=oceans" data-toggle="tooltip" data-placement="auto"
+                                                title="Rivers and glaciers, salt lakes, water utilization plans, dams, currents, floods. Water quality, hydrographic charts, tides, tidal waves, coastal information, reefs." >
+                                                <div class="category">
+                                                   <i class="fa fa-tint fa-4x"></i>
+                                                        <h4>Νερό</h4>
+                                                </div>
+                                        </a>
+                                </div>
+                        </div>
+                </div>
+        </div>
   {% endblock %}
