--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -77,6 +77,7 @@
             </a>
             <ul class="dropdown-menu">
           <li><a href="{% url "new_map" %}">{% trans "WebGIS" %}</a></li>
+          <li><a href="/in_or_out/">{% trans "Εντός ή Εκτός" %}</a></li>
             </ul>
           </li>
           <li id="nav_groups">
