adding e_urban app

--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -78,6 +78,7 @@
             <ul class="dropdown-menu">
           <li><a href="{% url "new_map" %}">{% trans "WebGIS" %}</a></li>
           <li><a href="/in_or_out/">{% trans "Εντός ή Εκτός" %}</a></li>
+          <li><a href="/e_urban/">{% trans "e-Πολεοδομία" %}</a></li>  
             </ul>
           </li>
           <li id="nav_groups">
