changing the name of an app

--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -70,15 +70,15 @@
             </ul>
           </li>
 
-          <li id="nav_polites" class="dropdown">
+          <li id="nav_apps" class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-            {% trans "Πολίτες" %}
+            {% trans "Εφαρμογές" %}
             <i class="caret"></i>
             </a>
             <ul class="dropdown-menu">
           <li><a href="{% url "new_map" %}">{% trans "WebGIS" %}</a></li>
           <li><a href="/in_or_out/">{% trans "Εντός ή Εκτός" %}</a></li>
-          <li><a href="/e_urban/">{% trans "e-Πολεοδομία" %}</a></li>  
+          <li><a href="/e_urban/">{% trans "e-Urban" %}</a></li>  
             </ul>
           </li>
           <li id="nav_groups">
