--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -78,7 +78,8 @@
             <ul class="dropdown-menu">
           <li><a href="{% url "new_map" %}">{% trans "WebGIS" %}</a></li>
           <li><a href="/in_or_out/">{% trans "Εντός ή Εκτός" %}</a></li>
-          <li><a href="/e_urban/">{% trans "e-Urban" %}</a></li>  
+          <li><a href="/e_urban/">{% trans "e-Urban" %}</a></li> 
+          <li><a href="">{% trans "e-Road (Android app)" %}</a></li> 
             </ul>
           </li>
           <li id="nav_groups">
