--- a/crete_gis/templates/site_base_old.html
+++ b/crete_gis/templates/site_base_old.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block header %}
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
