--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block header %}
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
@@ -48,6 +48,7 @@
               <a href="{% url "group_list" %}">{% trans "Groups" %}</a>
             </li> -->
 {% block extra_tab %}
+           {% comment %}
           <li id="nav_nomoi" class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
             {% trans "Διευθύνσεις" %}
@@ -69,24 +70,33 @@
               <li><a href="">{% trans "Διευθύνσεις Δημόσιας Υγείας και Κοινωνικής Μέριμνας Περιφερειακών Ενοτήτων" %}</a></li>
             </ul>
           </li>
+          {% endcomment %}
 
-          <li id="nav_polites" class="dropdown">
+          <li id="nav_apps" class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-            {% trans "Πολίτες" %}
+            {% trans "Εφαρμογές" %}
             <i class="caret"></i>
             </a>
             <ul class="dropdown-menu">
           <li><a href="{% url "new_map" %}">{% trans "WebGIS" %}</a></li>
           <li><a href="/in_or_out/">{% trans "Εντός ή Εκτός" %}</a></li>
-          <li><a href="/e_urban/">{% trans "e-Πολεοδομία" %}</a></li>  
+          <li><a href="/e_urban/">{% trans "e-Urban" %}</a></li>
+          <li><a href="/static/files/e-roadV3.apk" target='_blank'>{% trans "e-Road (Android app)" %}</a></li>  
             </ul>
           </li>
-          <li id="nav_groups">
+          <li id="groups">
             <a href="{% url "group_list" %}">{% trans "Ομάδες" %}</a>
           </li>
           <li id="nav_browse">
-            <a href="{% url "about" %}">{% trans "Σχετικά" %}</a>
-            </li>
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+            {% trans "Σχετικά" %}
+            <i class="caret"></i>
+            </a>
+            <ul class="dropdown-menu">
+               <li><a href="{% url "about" %}">{% trans "Σχετικά με το έργο" %}</a></a></li>
+               <li><a href="/suggest/">{% trans "Προτάσεις" %}</a></li>
+            </ul>
+          </li>
           {% endblock %}
 
             {% endblock %}
@@ -199,3 +209,84 @@
 	</div>
 </footer>
 {% endblock footer %}
+
+{% block signinOptions %}
+<!-- Modal must stay outside the navbar -->
+    {% if not user.is_authenticated %}
+    <div class="modal fade" id="SigninModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <h4 class="modal-title" id="myModalLabel">{% trans "Sign in" %}</h4>
+          </div>
+          <form class="form-signin" role="form" action="{% url "account_login" %}?next={{ request.path }}" method="post">
+            <div class="modal-body">
+              {% csrf_token %}
+              <div class="form-group">
+                <label for="id_username" class="sr-only">{% trans "Username" %}:</label>
+                <input id="id_username" class="form-control" name="username" placeholder="{% trans "Username" %}" type="text" />
+              </div>
+              <div class="form-group">
+                <label for="id_password" class="sr-only">{% trans "Password" %}:</label>
+                <input id="id_password" class="form-control" name="password" placeholder="Password" type="password" />
+              </div>
+              <label class="checkbox">
+                <input type="checkbox" /> {% trans "Remember Me" %}
+              </label>
+            </div>
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-primary btn-block">{% trans "Sign in" %}</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    {% else %}
+    <div class="modal fade" id="UserModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="myModalLabel">{% trans "Menu" %}</h4>
+          </div>
+          <div class="modal-body">
+            <ul class="list-unstyled">
+              <li><a href="{% url "layer_upload" %}"><i class="fa fa-cloud-upload"></i> {% trans "Upload Layers" %}</a></li>
+              <li class="modal-divider"></li>
+              <li><a href="{{ user.get_absolute_url }}"><i class="fa fa-user"></i> {% trans "Profile" %}</a></li>
+              <li><a href="{% url "recent-activity" %}"><i class="fa fa-fire"></i> {% trans "Recent Activity" %}</a></li>
+              <li><a href="{% url "messages_inbox" %}"><i class="fa fa-inbox"></i> {% trans "Inbox" %}</a></li>
+              {% if USE_NOTIFICATIONS %}
+                <li><a href="{% url "notification_notice_settings" %}"><i class="fa fa-bell"></i> {% trans "Notifications" %}</a></li>
+              {% endif %}
+              {% if perms.announcements.can_manage %}
+              <li><a href="{% url "announcements_list" %}"><i class="fa fa-bullhorn"></i> {% trans "Announcements" %}</a></li>
+              {% endif %}
+              {% if user.is_superuser %}
+              <li><a href="{% url "services" %}"><i class="fa fa-globe"></i> {% trans "Remote Services" %}</a></li>
+              <li><a href="{% url "account_invite_user" %}"><i class="fa fa-edit"></i> {% trans "Invite User" %}</a></li>
+              <li class="modal-divider"></li>
+              <li><a href="{{ GEOSERVER_BASE_URL }}"><i class="fa fa-gears"></i> {% trans "GeoServer" %}</a></li>
+              {% endif %}
+              {% if user.is_staff %}
+              <li><a href="{% url "admin:index" %}"><i class="fa fa-cog"></i> {% trans "Admin" %}</a></li>
+              {% endif %}
+              {% block extra_user_menu %}
+              {% endblock %}
+              <li class="modal-divider"></li>
+              <li><a href="/static/pdf/crete_gis_manual_final.pdf" target='_blank'><i class="fa fa-question-circle"></i> {% trans "Help" %}</a></li>
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <form action="{% url "account_logout" %}" id="logout_form" method="post">
+              {% csrf_token %}
+              <a class="btn btn-warning btn-block" href="javascript:{}" onclick="document.getElementById('logout_form').submit();">{% trans "Log out" %}</a>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endif %}
+    <!-- End of Modal -->
+    {% endblock signinOptions %}
