--- a/crete_gis/templates/site_index.html
+++ b/crete_gis/templates/site_index.html
@@ -51,7 +51,7 @@
     <section id="data" class="wrapper">
     <img id="crete_data" class="raw-page" src="../static/img/crete_data.png">
       <p class="data-byline">Μπορείτε να αναζητήσετε, να ανακτήσετε, να μελετήσετε και να κατεβάσετε γεωχωρικά δεδομένα που αφορούν το περιβάλλον, τη γεωργία, την κατασκευή, την υγεία κ.α <br>
-      <a class="btn" style="color:#fff;" ref="http://senselab.tucserv.tuc.gr/layers/?limit=100&offset=0&type__in=vector" target=_blank>ΕΙΣΟΔΟΣ</a></p>
+      <a class="btn" style="color:#fff;" href="http://senselab.tucserv.tuc.gr/layers/?limit=100&offset=0&type__in=vector" target=_blank>ΕΙΣΟΔΟΣ</a></p>
     </section>
     <section id="sat_repo" class="wrapper">
     <img id="sat_data" class="raw-page" src="../static/img/sat_data2.png">
